Add ticker animation and begin styling

--- a/index.html
+++ b/index.html
@@ -2,28 +2,9 @@
 <html>
 	<head>
 		<title></title>
-			<style>
-				.swatch {
-					width: 100px;
-					height: 100px;
-				}
-			
-				.swatch {
-					/* Remove this rule when you set your colors! */
-					background-color: red;
-					margin: 1px;
-				}
-			
-				main {
-					width: 600px;
-					margin: auto;
-				}
-			</style>
+			<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-
-		<!-- Base Styles - Set the base styles for the page -->
-
 		<main>
 
 			<!-- navbar - Style the navbar -->
@@ -42,7 +23,10 @@
 
 			<!-- banner -->
 			<section id="banner">
-				<ticker-tape><h1>...Color.com is awesome...</h1></ticker-tape>
+				<!-- ticker-tape modifiable -->
+				<ticker-tape>
+					<h1>...Color.com is awesome...</h1>
+				</ticker-tape>
 			</section>
 
 
