Navbar to sidebar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<main>
-
+			<div class="upperblock"></div>
 			<!-- navbar - Style the navbar -->
 			<section id="nav">
 				<header>
