--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		<main>
-			<div class="upperblock"></div>
 			<!-- navbar - Style the navbar -->
 			<section id="nav">
+				<div class="upper-block"></div>
 				<header>
 					<nav>
 						<a href="#">Color.com</a>
@@ -25,7 +25,7 @@
 			<section id="banner">
 				<!-- ticker-tape modifiable -->
 				<ticker-tape>
-					<h1>...Color.com is awesome...</h1>
+					<h2>...Color.com is awesome...</h2>
 				</ticker-tape>
 			</section>
 
@@ -38,8 +38,6 @@
 				<p><strong>Color</strong> (American English), or colour (Commonwealth English), is the characteristic of visual perception described through color categories, with names such as red, orange, yellow, green, blue, or purple. This perception of color derives from the stimulation of photoreceptor cells (in particular cone cells in the human eye and other vertebrate eyes) by electromagnetic radiation (in the visible spectrum in the case of humans).</p>
 				<p>Color is really important for making great <abbr title="Cascading Style Sheets">CSS</abbr> styles. <a href="#">Color.com is the most amazing place to get your colors.</a></p>
 			</section>
-
-
 			
 			<!-- Section Color Cards - This section contains three cards Style these -->
 			<section id="popular">
