in progress: radio work

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</header>
 				<div>
 					<form>
-						<label>
+						<label class="input_label">
 							name
 							<input type="text">
 						</label>
@@ -106,22 +106,22 @@
 							<textarea></textarea>
 						</label>
 
-						<label>
+						<label class="checkbox">
 							Sign up for the newsletter
 							<input type="checkbox">
 						</label>
 
-						<label>
+						<label class="radio">
 							<input type="radio" name="user">
 							Artist
 						</label>
 
-						<label>
+						<label class="radio">
 							<input type="radio" name="user">
 							Designer
 						</label>
 
-						<label>
+						<label class="radio">
 							<input type="radio" name="user">
 							Enthusiast
 						</label>
